@@ -3,7 +3,6 @@ package btc
 const(
 	COIN = 1e8
 	MAX_MONEY = 21000000 * COIN
-	MAX_BLOCK_SIZE = 1e6
 	MAX_BLOCK_WEIGHT = 4e6
 	MessageMagic = "Bitcoin Signed Message:\n"
 	LOCKTIME_THRESHOLD = 500000000
